2017-07-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/RspConnection.cpp (RspConnection::RspConnection):
	Initialize mHavePendingBreak.
	* targets/ri5cy/Ri5cyImpl.cpp: Add using declaration for std::cerr
	and std::endl.

2017-07-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/picorv32/Picorv32.cpp (Picorv32::getCycleCount)
	(Picorv32::getInstrCount): Call corresponding method in
	mPicorv32Impl.
	* targets/picorv32/Picorv32Impl.cpp (Picorv32Impl::Picorv32Impl):
	Initialize mInstr.
	(Picorv32Impl::getCycleCount, Picorv32Impl::getInstrCount):
	Created.
	* targets/picorv32/Picorv32Impl.h (class Picorv32Impl): Add
	getCycleCount and getInstrCount.

2017-07-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/GdbServer.cpp: Include ctime, provide using for
	std::localtime and std::put_time.
	(GdbServer::rspClientRequest): Remove redundant std::chrono.
	(GdbServer::rspCommand): Fix some alignment issues, add OK
	responses for several commands, implement timestamp.

2017-07-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/GdbServer.cpp (GdbServer::rspCommand): Add missing
	monitor commands.
	(GdbServer::rspSetCommand): Created.
	(GdbServer::rspShowCommand): Created.
	* server/GdbServer.h (class GdbServer): Add rspSetCommand and
	rspShowCommand methods.
	* server/RspPacket.cpp (RspPacket::packRcmdStr): Created.
	* server/RspPacket.h (class RspPacket): Add packRcmdStr method.
	* server/TraceFlags.cpp (TraceFlags::traceRsp): Add setter.
	(TraceFlags::allFlags): Created setter and getter.
	* server/TraceFlags.h: Add traceRsp setter and allFlags setter and
	getter methods.
	* server/Utils.cpp (Utils::split): Created.
	* server/Utils.h (class Utils): Added split method.

2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This is a GDB server to work with RI5CY with 128-bit wide
	instruction FIFO. It also fixes a minor glitch with RSP.

	* server/RspConnection.cpp (RspConnection::RspConnection):
	Initialize mNumGetBufChars.